[gd_scene load_steps=5 format=3 uid="uid://c1w1v3hu7q3du"]

[ext_resource type="Script" path="res://effects/space_background.gd" id="1_raocj"]
[ext_resource type="Texture2D" uid="uid://cji2bkf7q6jvd" path="res://assets/space.png" id="1_ujveh"]
[ext_resource type="Texture2D" uid="uid://b358kb0wm7ide" path="res://assets/far_stars.png" id="2_vif1m"]
[ext_resource type="Texture2D" uid="uid://dnwaw3umeh0pl" path="res://assets/close_stars.png" id="3_i7lbh"]

[node name="SpaceBackground" type="ParallaxBackground"]
script = ExtResource("1_raocj")

[node name="SpaceLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="Space" type="TextureRect" parent="SpaceLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("1_ujveh")

[node name="FarStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="FarStars" type="TextureRect" parent="FarStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_vif1m")

[node name="NearStarsLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(0, 240)

[node name="NearStars" type="TextureRect" parent="NearStarsLayer"]
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("3_i7lbh")
